--- a/opdracht1/index.html
+++ b/opdracht1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -28,14 +28,14 @@
             btn-dark
             -->
 
-            <button class="btn ">Eerste knop</button>
-            <button class="btn ">Tweede knop</button>
-            <button class="btn ">Derde knop</button>
-            <button class="btn ">Vierde knop</button>
-            <button class="btn ">Vijfde knop</button>
-            <button class="btn ">Zesde knop</button>
-            <button class="btn ">Zevende knop</button>
-            <button class="btn ">Achtste knop</button>
+            <button class="btn btn-primary ">Eerste knop</button>
+            <button class="btn btn-secondary ">Tweede knop</button>
+            <button class="btn btn-success">Derde knop</button>
+            <button class="btn btn-danger">Vierde knop</button>
+            <button class="btn btn-warning">Vijfde knop</button>
+            <button class="btn btn-info">Zesde knop</button>
+            <button class="btn btn-light">Zevende knop</button>
+            <button class="btn btn-dark">Achtste knop</button>
         </div>
     </div>
 </body>
