--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="img/fe-logo.png" alt="Frontend Essentials logo">
+        <nav id="navh">
+            <img id="logo1" src="img/fe-logo.png" alt="Frontend Essentials logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="overmij.html">Over mij</a></li>
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-            <img src="img/fe-logo.png" alt="Frontend Essentials logo">
+            <img id="logo2" src="img/fe-logo.png" alt="Frontend Essentials logo">
             <ul>
                 <li><a href="index.html">Optie1</a></li>
                 <li><a href="index.html">Optie2</a></li>
@@ -57,7 +57,7 @@
 
     <footer>
             <h1>Dit is een h1 koptekst in de footer</h1>
-            <img src="img/fe-logo.png" alt="Frontend Essentials logo">
+            <img id="logo3" src="img/fe-logo.png" alt="Frontend Essentials logo">
             <h2>Dit is een h2 koptekst in de footer</h2>
             <nav>
                 <ul>
